cluster-apps/bookstack/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bookstack
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - bookstack
                topologyKey: kubernetes.io/hostname
      containers:
      - name: bookstack
        image: linuxserver/bookstack:version-v0.31.4
        ports:
          - containerPort: 80
            name: http
        livenessProbe:
          failureThreshold: 10000
          httpGet:
            path: /
            port: http
        volumeMounts:
          - name: env
            mountPath: /config/www/.env
            subPath: .env
            readOnly: true
      volumes:
        - name: env
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: bookstack
