cluster-apps/bookstack/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    cert-manager.io/cluster-issuer: le-production
  labels:
    app: bookstack
  name: bookstack
spec:
  rules:
    - host: wiki.cajun.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack
                port:
                  name: http

  tls:
    - hosts:
        - wiki.cajun.pro
      secretName: wiki-cajun-pro
